<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>isep.lei.sem2</groupId>
    <artifactId>Sem2App</artifactId>
    <version>1.0-SNAPSHOT</version>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
            <artifactId>maven-assembly-plugin</artifactId>
            <configuration>
                <archive>
                    <manifest>
                        <mainClass>app.ui.Main</mainClass>
                    </manifest>
                </archive>
                <descriptorRefs>
                    <descriptorRef>jar-with-dependencies</descriptorRef>
                </descriptorRefs>
            </configuration>
            <executions>
                <execution>
                    <id>make-assembly</id>
                    <phase>package</phase>
                    <goals>
                        <goal>single</goal>
                    </goals>
                </execution>
            </executions>
        </plugin>
            
            <plugin>
		   <groupId>org.apache.maven.plugins</groupId>
		    <artifactId>maven-surefire-plugin</artifactId>
		    <version>2.22.0</version>
			<dependencies>
			   <dependency>
					<groupId>org.apache.maven.surefire</groupId>
					<artifactId>surefire-junit4</artifactId>
					<version>2.22.0</version>
				</dependency>
        <dependency>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
          <version>4.13.2</version>
      </dependency>
			</dependencies>
			<configuration>
				<includes>
					<include>**/*.java</include>
				</includes>
			</configuration>
			<!-- <dependencies>-->
                        <!-- This dependency must be included, otherwise Maven Surefire will not recognise the test cases -->
				<!-- <dependency>
					<groupId>org.junit.platform</groupId>
					<artifactId>junit-platform-surefire-provider</artifactId>
					<version>1.2.0</version>
				</dependency>
			</dependencies>
			-->
	</plugin>
	<!-- Required for generating PIT Mutation reports -->
	<plugin>
		<groupId>org.pitest</groupId>
		<artifactId>pitest-maven</artifactId>
		<version>1.4.3</version>
		
		<configuration>
			<!-- <timestampedReports>false</timestampedReports> -->
			<!-- <inScopeClasses> <param>lapr.project.model.*</param> <param>lapr.project.utils.*</param> </inScopeClasses> -->
			<targetClasses>
				<param>app.domain.model.*</param>
				<param>app.utils.*</param>
				<param>app.controller.*</param>
			</targetClasses>
			<targetTests>
				<param>app.domain.model.*</param>
				<param>app.utils.*</param>
				<param>app.controller.*</param>
			</targetTests>
			<outputFormats>
				<outputFormat>XML</outputFormat>
				<outputFormat>HTML</outputFormat>
			</outputFormats>
			<!-- <verbose>true</verbose> -->
		</configuration>
	</plugin>
  <plugin>
    <groupId>org.jacoco</groupId>
    <artifactId>jacoco-maven-plugin</artifactId>
    <version>0.8.5</version>
    <executions>
      <execution>
        <goals>
          <goal>prepare-agent</goal>
        </goals>
      </execution>
      <!-- attached to Maven test phase -->
      <execution>
        <id>report</id>
        <phase>test</phase>
        <goals>
          <goal>report</goal>
        </goals>
      </execution>
    </executions>
  </plugin>
	<!-- Build an executable JAR -->
	<plugin>
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-jar-plugin</artifactId>
		<version>3.2.0</version>
		<configuration>
		<archive>
			<manifest>
				<addClasspath>true</addClasspath>
				<classpathPrefix>lib/</classpathPrefix>
				<mainClass>app.ui.Main</mainClass>
			</manifest>
		</archive>
		</configuration>
	</plugin>
        </plugins>
    </build>
	<properties>
		<maven.compiler.source>1.11</maven.compiler.source>
		<maven.compiler.target>1.11</maven.compiler.target>
	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    	<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

	<repositories>
		<repository>
			<id>repsy</id>
			<name>lei-soft</name>
			<url>https://repo.repsy.io/mvn/pmaio/lei-soft</url>
		</repository>
	</repositories>

    <dependencies>
		<dependency>
			<groupId>pt.isep.lei.esoft</groupId>
			<artifactId>AuthLib</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.5</version>
        </dependency>
        <dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>RELEASE</version>
			<scope>test</scope>
        </dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
		<dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>13</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>13</version>
        </dependency>
    </dependencies>
</project>
